# MJ_works

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.agents/skills/draft-pr-body/: SKILL.md
.agents/skills/draft-pr-body/agents/: openai.yaml
.agents/skills/review-pull-request/: SKILL.md
.agents/skills/review-pull-request/agents/: openai.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  change_request.yml  epic.yml  task.yml
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  SdkConfiguration.cmake
configuration/: clang-tidy-exclude.txt  default.yaml  dev-tools.env  requirements-dev.txt
configuration/project/: customer1.yaml  reference.yaml
customer_project/: CMakeLists.txt
customer_project/customer1/: CMakeLists.txt
customer_project/customer1/docs/: README.md
customer_project/customer1/include/: customer1_api.hpp
customer_project/customer1/src/: main.cpp
customer_project/reference/: CMakeLists.txt
customer_project/reference/capture/: CMakeLists.txt
customer_project/reference/capture/camera/: capture_stub.cpp
customer_project/reference/capture/raw_file/: CMakeLists.txt
customer_project/reference/display/: CMakeLists.txt
customer_project/reference/display/opencv/: display_stub.cpp
customer_project/reference/display/raw_file/: CMakeLists.txt
customer_project/reference/draw/: CMakeLists.txt  draw_stub.cpp
customer_project/reference/src/: CMakeLists.txt  main.cpp
customer_project/reference/src/nvidia/: reference_backend_stub.cpp
customer_project/reference/src/vanilla/: CMakeLists.txt
docs/design/: coding_guideline.md  swad.md  swrs.md
docs/process/: coding_guideline.md  development_workflow.md  git_workflow.md  review_checklist.md  review_rule.md  static_analysis.md
docs/template/detailed_design/: design_document_example.md  design_document_rule.md  design_document_skeleton.md
docs/template/implementation/: hpp_cpp_example.md  hpp_cpp_rule.md  hpp_cpp_skeleton.md
docs/template/review/: review_comment_template.md
docs/template/test/: test_code_example.md  test_code_rule.md  test_code_skeleton.md
githooks/: commit-msg  pre-commit
include/: sdk_api.hpp  sdk_types.hpp
include/arm/: sdk_arm_param.hpp
include/nvidia/: sdk_nvidia_param.hpp
include/vanilla/: sdk_vanilla_param.hpp
scripts/: check_commit_msg.sh  clang_tidy.py  format.sh  generate_coverage_report.sh  setup_dev.sh  setup_hooks.sh
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  algorithm_stub.cpp
src/algorithm_hwal/nvidia/: algorithm_hwal_stub.cpp
src/algorithm_hwal/vanilla/: CMakeLists.txt
src/foundations/: CMakeLists.txt  foundations_stub.cpp
src/hwal/arm/: CMakeLists.txt
src/hwal/nvidia/: hwal_stub.cpp
src/osal/: CMakeLists.txt
src/osal/linux/: osal_stub.cpp
src/osal/windows/: CMakeLists.txt
src/sdk/: CMakeLists.txt  sdk_api.cpp
src/sdk/arm/: sdk_backend_stub.cpp
src/sdk/vanilla/: CMakeLists.txt
testcases/: CMakeLists.txt  google_test_smoke_test.cpp
testcases/customer_project/: CMakeLists.txt  README.md
testcases/scripts/: clang_tidy_test.py  cmake_configuration_test.sh  setup_dev_test.sh
testcases/sdk/: CMakeLists.txt  README.md
testcases/src/: CMakeLists.txt  README.md
tools/: README.md
